# world_happiness_report

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
src/: main.py
src/models/: neuronal_map_model.py
src/processing/: process_dataset.py  run_pipeline.py  utils.py
