[tool.poetry]
name = "world_happiness"
version = "0.1.0"
description = ""
authors = ["lautaro <lm.bringas98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
neural-map = "^1.0.0"
python-multipart = "^0.0.5"
pycountry = "^20.7.3"
pandas = "^1.2.4"
seaborn = "^0.11.1"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
